--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
@@ -15,16 +17,16 @@
             <nav>
                 <ul>
                 <li>
-                    <a href="#">Page1</a>
+                    <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">Page2</a>
+                    <a href="#">Character</a>
                 </li>
                 <li>
-                    <a href="#">Page3</a>
+                    <a href="#">Shop</a>
                 </li>
                 <li>
-                    <a href="#">Page4</a>
+                    <a href="#">Login</a>
                 </li>
                 </ul>
             </nav>
@@ -55,14 +57,14 @@
                         <img src="image/btn_more.png" alt="view more">
                     </a>
                 </div>
-                <img src="image/ruromani.png" alt="画像">
+                <img data-aos="zoom-in" src="image/ruromani.png" alt="画像">
             </section>
             <section id="sec-2">
               <h2>
                 Character
                 <span>キャラクター</span>
               </h2>
-              <div class="gallery">
+              <div class="gallery" data-aos="fade-up">
                 <img src="image/sinamon.png" alt="画像1">
                 <img src="image/kity.png" alt="画像2">
                 <img src="image/kuromi.png" alt="画像3">
@@ -90,5 +92,8 @@
             <small class="copy-right">&copy; Site name</small>
         </footer>
     </div>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
